4단계 - 자동차 경주(우승자) (#3969)
* docs(README.md): 구현할 기능목록 추가

* refactor(Car): Client는, 자동차 이름을 부여하여, 1대의 자동차 개체를 생성할 수 있다

* refactor(Cars): 소유하고 있는 자동차 개체들의 이름과, 현재 전진 거리 상황을 반환할 수 있어야 한다

* refactor(Game): 게임완료후, 우승 자동차 이름목록을 반환 할 수 있으며, 매 회 플레이가 끝나면, 자동차들의 이름과 전진상태 목록을 반환 할 수 있다

* refactor(Application,InputView,OutputView): ViewLayer완성

* refactor: 자동차 이름을 CarName Value Object로 포장

* refactor: Game객체 생성자를 DI받도록 개선

- Cars : 자동차이름들을 ViewLayer에서 파싱후, Controller에서 해당객체 생성하여 DI
- TryNo : Controller에서 객체생성하여, DI